--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="field">
                     <div class="control columns is-centered is-mobile is-desktop" id="login-submit-control">
-                        <button type="submit" class="button is-dark" id="login-button">Entrar</button>
+                        <button type="submit" class="button is-dark is-outlined" id="login-button">Entrar</button>
                     </div>
                 </div>
             </form>
